tests/reject/tbind4.nim
# Module B
import mbind4

echo genId() #ERROR_MSG instantiation from here


